[*] testlist         - Tests a list argument for certain things. (e.g. echo (testlist "1 2.3 3.14") // Output: 1 // It is a valid list of ints/floats.)
[*] listaverage      - Returns the average of a list of numbers. (Supports ints and floats - e.g. echo (listaverage "2 5 5") // Output: 4.0)
[*] player1          - // TODO explain // Also getposition and positiontype have been removed in favor of this command which does that and a lot more. :p
[*] rndmap           - Returns a random official map. (e.g. echo (rndmap) // Example output: ac_desert3)
[*] persistidents    - Controls persistence of idents/aliases
[*] Multiple Idents  - New helper aliases for voting for SURV, TPF, and TLSS. (e.g. /surv ac_desert)
[*] "Sleeps" can be persistent. (e.g. "Persist" even through map loads - new optional 3rd argument of the /sleep command)
[*] Substr crash bug is fixed. Also the command can now use a negative position value.
[*] New stat in (pstat_score) for teamkills. New list is: FLAGS FRAGS DEATHS POINTS TEAM TEAMKILLS NAME // TODO move to compatibility.cfg
[*] on_quit.cfg for deleting aliases from saved.cfg upon quit.
[*] Many aliases that were stored in saved.cfg are now being stored as a single alias (list) "tmpClientData" and being restored on start. (see on_quit.cfg) // Not yet, still buggy. :P
[*] Missing bracket ([], (), etc.) errors now also notify the client of what file the error resides in.
[*] New automatically executed scripts folder in the root install directory of AC.
[*] New delta_edit/game_# aliases for easily tweaking gamma/fov/flyspeed on-the-fly. (e.g. Hold F5 and scroll for gamma, F6 for fov, bind "domodifier 10" to a key for flyspeed)
[*] The /mapsize command now silenty returns 6-12, instead of conoutf'ing ssize.
[*] The /newmap command has a (temporary) new range of 6-9. // TODO: Fix client crashing on /newmap >9!
[*] The /spectate command can now only be used if connected to a server.
[*] The /togglebotview command can no longer be used in arena modes.