@@ -254,6 +254,9 @@ docexample [echo (strreplace "Hello cruel world" cruel "")] [Output: Hello world
 docident [listaverage] [Returns the average of a list of numbers.];
 docargument [L] [the list of numbers] [supports ints and floats] [0];
 docexample [echo (listaverage "2 5 5")] [Output: 4.0];
+docident [add2bind] [Adds a block of code, if it does not already exist, to a keybind.];
+docargument [K] [the key to add to] [] [0];
+docargument [C] [the code to add] [] [0];
 docsection [General]
 docident [addserver] [Adds a server to the list of server to query in the server list menu.];
 docargument [S] [the address of the server (hostname or IP)] [] [0];
@@ -422,6 +425,7 @@ docident [version] [Gets an integer representing the game version. READ ONLY];
 docremark [As example, version 1.0 is represented as value 1000.];
 docident [writecfg] [writes current configuration to config/saved.cfg - automatic on quit];
 docident [onNewMap] [If this alias exists, it will be automatically executed when you start a new map.];
+docident [numconlines] [Holds the current number of lines on the console.];
 docsection [Gameplay]
 docident [add2alias] [This will append the passed 2nd argument to any existing content of the alias named in the 1st argument. Several popular aliases have predefined shortcuts using this scriptalias: addOnQuit, addOnLoadOnce, addOnLoadAlways. Check config/scripts.cfg for possible omissions in that list.];
 docexample [foo = "one" add2alias foo two echo foo] [Output: one two];
