@@ -171,7 +171,9 @@ CubeScript
 [*] listaverage      - Returns the average of a list of numbers. (Supports ints and floats - e.g. echo (listaverage "2 5 5") // Output: 4.0)
 [*] player1          - // TODO explain // Also getposition and positiontype have been removed in favor of this command which does that and a lot more. :p
 [*] rndmap           - Returns a random official map. (e.g. echo (rndmap) // Example output: ac_desert3)
-[*] persistidents    - Controls persistence of idents/aliases
+[*] persistidents    - Controls persistence of idents/aliases. (Stored into saved.cfg on quit.)
+[*] add2bind         - Adds a block of code, if it does not already exist, to a keybind.
+[*] numconlines      - Returns the current number of lines on the console. (e.g. echo $numconlines // Example output: 153)
 [*] Multiple Idents  - New helper aliases for voting for SURV, TPF, and TLSS. (e.g. /surv ac_desert)
 [*] "Sleeps" can be persistent. (e.g. "Persist" even through map loads - new optional 3rd argument of the /sleep command)
 [*] Substr crash bug is fixed. Also the command can now use a negative position value.
